added gameplay features and mine

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,10 +11,18 @@ div {
   margin-top: 20px;
 }
 
+.minesweeper-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
 .minesweeper-board {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 2px;
+  width: 80%;
 }
 
 .row {
@@ -24,6 +32,7 @@ div {
 .cell {
   flex: 1;
   height: 30px;
+  width: 30px;
   border: 1px solid #ccc;
   display: flex;
   align-items: center;
@@ -33,10 +42,12 @@ div {
   font-weight: bold;
 }
 
-.cell.hidden {
+.hidden {
   background-color: #ddd;
+  height: 30px;
+  width: 30px;
 }
 
 .cell:hover {
-  background-color: #eee;
+  background-color: #d3e81a;
 }
