--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -12,3 +12,65 @@
   font-size: calc(1px + 2vmin);
   color: white;
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center children horizontally */
+  padding: 20px; /* Add padding for better visual appearance */
+}
+
+.command-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%; /* Take the full width of the container */
+  
+}
+
+.command-bar input {
+  flex: 1;
+  margin: 0 10px;
+}
+
+/* 
+Optional: Add styles for the "Help" button */
+.command-bar button {
+  border: none;
+  color:#282c34;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color:#282c34;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-content {
+  background: #fff;
+  padding: 20px;
+  max-width: 400px;
+  text-align: center;
+  position: relative;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: black;
+  cursor: "pointer";
+}
+
+.menu{
+  overflow: scroll;
+}
